man page translations: update French

--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-03-23 09:04+0100\n"
-"PO-Revision-Date: 2022-02-12 14:41+0000\n"
-"Last-Translator: tmtisfree <tmtisfree@free.fr>\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2022\n"
 "Language-Team: French (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -41,10 +41,8 @@ msgstr "66.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-02-06"
 msgid "2022-03-13"
-msgstr "06-02-2022"
+msgstr "2022-03-13"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1600,10 +1598,8 @@ msgstr "Définit le code langue par défaut qui sera utilisé pour les pistes po
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-#, fuzzy
-#| msgid "The default language code is '<literal>und</literal>' for 'undefined'."
 msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
-msgstr "Le code langue par défaut pour « undefined » est « <literal>und</literal> »."
+msgstr "Le code de langue par défaut pour « undetermined » est « <literal>und</literal> »."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:140
@@ -2569,7 +2565,7 @@ msgstr "Type <abbrev>MIME</abbrev> de la pièce jointe suivante. S'applique à l
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1103
 msgid "If no <abbrev>MIME</abbrev> type is given a for an attachment, its type will be detected automatically."
-msgstr ""
+msgstr "Si aucun type <abbrev>MIME</abbrev> n'est donné pour une pièce jointe, son type sera détecté automatiquement."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1109
@@ -2600,27 +2596,25 @@ msgstr "&mkvextract; peut être utilisé pour extraire les fichiers joints d'un 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1140
 #: doc/man/mkvpropedit.xml:360
-#, fuzzy
-#| msgid "<option>--enable-durations</option>"
 msgid "<option>--enable-legacy-font-mime-types</option>"
-msgstr "<option>--enable-durations</option>"
+msgstr "<option>--enable-legacy-font-mime-types</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1143
 #: doc/man/mkvpropedit.xml:363
 msgid "Enables the use of legacy <abbrev>MIME</abbrev> types for certain types of font attachments. For example, '<literal>application/x-truetype-font</literal>' will be used for TrueType fonts instead of '<literal>fonts/ttf</literal>'."
-msgstr ""
+msgstr "Active l'utilisation des anciens types <abbrev>MIME</abbrev> pour certains types de pièces jointes de polices de caractères. Par ex., « <literal>application/x-truetype-font</literal> » sera utilisé pour les polices TrueType au lieu de « <literal>fonts/ttf</literal> »."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1148
 msgid "This affects both new attachments if its <abbrev>MIME</abbrev> type is detected automatically and existing attachments whose stored <abbrev>MIME</abbrev> types will be remapped to the legacy ones."
-msgstr ""
+msgstr "Ceci affecte les nouvelles pièces jointes si leur type <abbrev>MIME</abbrev> est détecté automatiquement et celles existantes pour lesquelles les types <abbrev>MIME</abbrev> stockés seront remplacés par les anciens."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1153
 #: doc/man/mkvpropedit.xml:373
 msgid "The affected <abbrev>MIME</abbrev> types are '<literal>font/sfnt</literal>', '<literal>font/ttf</literal>' and '<literal>font/collection</literal>' which are all mapped to '<literal>application/x-truetype-fonts</literal>' and '<literal>font/otf</literal>' which is mapped to '<literal>application/vnd.ms-opentype</literal>'."
-msgstr ""
+msgstr "Les types <abbrev>MIME</abbrev> affectés sont « <literal>font/sfnt</literal> », « <literal>font/ttf</literal> » et « <literal>font/collection</literal> ». Ils sont tous remplacés par « <literal>application/x-truetype-fonts</literal> ». « <literal>font/otf</literal> » est remplacé par « <literal>application/vnd.ms-opentype</literal> »."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:1163
@@ -5130,7 +5124,7 @@ msgstr "Définit la description à  utiliser pour l'opération suivante <option>
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvpropedit.xml:368
 msgid "This affects both adding new attachments and replacing existing attachments, but only if the new <abbrev>MIME</abbrev> type isn't specified. Other existing attachments aren't changed."
-msgstr ""
+msgstr "Ceci affecte l'ajout de nouvelles pièces jointes et le remplacement de celles existantes, mais seulement si le nouveau type <abbrev>MIME</abbrev> n'est pas spécifié. Les autres pièces jointes ne sont pas modifiées."
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:382
