translations: update German

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.3.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-28 18:51+0200\n"
-"PO-Revision-Date: 2022-03-28 18:53+0200\n"
+"PO-Revision-Date: 2022-03-28 18:59+0200\n"
 "Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
 "Language-Team: German <moritz@bunkus.org>\n"
 "Language: de\n"
@@ -691,7 +691,7 @@ msgid ""
 "                           form or not at all (default: canonical form).\n"
 msgstr ""
 "  --normalize-language-ietf <canonical|extlang|off>\n"
-"                           Alle IETF BCP 47 Sprach-Tags auf entweder ihre\n"
+"                           Alle IETF BCP 47 Sprachelemente auf entweder ihre\n"
 "                           kanonische Form oder ihre Erweiterte-Sprach-Unter-\n"
 "                           Tags-Form normalisieren oder gar nicht normalisieren\n"
 "                           (Standard: kanonische Form).\n"
@@ -1916,7 +1916,7 @@ msgstr "Alle &ausklappen"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:391
 #, no-c-format
 msgid "&Extended language subtag:"
-msgstr "Erweiterte-Sprache-Unter-Tag:"
+msgstr "Erweiterte-Sprache-Unterelemente:"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:698
 #, no-c-format
@@ -2652,13 +2652,13 @@ msgstr "»{0}« ist keine gültige DVD-Titelnummer."
 #: src/merge/mkvmerge.cpp:575
 #, no-c-format
 msgid "'{0}' is not a valid IETF BCP 47/RFC 5646 language tag in '{1}'. Additional information from the parser: {2}\n"
-msgstr "'{0}' ist kein gültiger IETF BCP 47-/RFC 5646-Sprach-Tag in '{1}'. Zusätzliche Information vom Parser: {2}\n"
+msgstr "'{0}' ist kein gültiges IETF BCP 47-/RFC 5646-Sprachelement in '{1}'. Zusätzliche Information vom Parser: {2}\n"
 
 #: src/common/xml/ebml_chapters_converter.cpp:141
 #: src/common/xml/ebml_tags_converter.cpp:125
 #, no-c-format
 msgid "'{0}' is not a valid IETF BCP 47/RFC 5646 language tag. Additional information from the parser: {1}"
-msgstr "'{0}' ist kein gültiger IETF BCP 47-/RFC 5646-Sprach-Tag. Zusätzliche Information vom Parser: {1}"
+msgstr "'{0}' ist kein gültiges IETF BCP 47-/RFC 5646-Sprachelement. Zusätzliche Information vom Parser: {1}"
 
 #: src/common/xml/ebml_chapters_converter.cpp:148
 #, no-c-format
@@ -3739,7 +3739,7 @@ msgstr "Immer automatisch durch kanonische Form ersetzen"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:182
 #, no-c-format
 msgid "Always automatically replace with extended language subtags form"
-msgstr "Immer automatisch durch Erweiterte-Sprach-Unter-Tags-Form ersetzen"
+msgstr "Immer automatisch durch Erweiterte-Sprach-Unterelemente-Form ersetzen"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2189
 #, no-c-format
@@ -5473,7 +5473,7 @@ msgstr "Standard"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2093
 #, no-c-format
 msgid "Default IETF BCP 47 language editing &mode:"
-msgstr "Standard-Bearbeitungs&modus für IETF BCP 47-Sprach-Tags:"
+msgstr "Standard-Bearbeitungs&modus für IETF BCP 47-Sprachelemente:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2151
 #, no-c-format
@@ -6481,17 +6481,17 @@ msgstr "Extrahiert Kapitelinformationen im einfachen Format, das auch in verschi
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:215
 #, no-c-format
 msgid "Extended language subtag"
-msgstr "Erweiterte-Sprache-Unter-Tag"
+msgstr "Erweiterte-Sprache-Unterelemente"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:180
 #, no-c-format
 msgid "Extended language subtags form"
-msgstr "Erweiterte-Sprach-Unter-Tags-Form"
+msgstr "Erweiterte-Sprach-Unterelemente-Form"
 
 #: src/common/bcp47.cpp:445
 #, no-c-format
 msgid "Extension subtags must follow at least a primary language subtag."
-msgstr "Erweiterungs-Unter-Tags müssen mindestens einem Unter-Tag mit der primären Sprache folgen."
+msgstr "Erweiterungs-Unterelemente müssen mindestens einem Unterelement mit der primären Sprache folgen."
 
 #: src/extract/extract_cli_parser.cpp:82
 #, no-c-format
@@ -9110,7 +9110,7 @@ msgstr "Normale Priorität"
 #: src/propedit/propedit_cli_parser.cpp:272
 #, no-c-format
 msgid "Normalize all IETF BCP 47 language tags of changed elements to either their canonical form (mode 'canonical'), their extended language subtags form (mode 'extlang') or not at all (mode 'off')"
-msgstr "Alle IETF BCP 47 Sprach-Tags geänderter Elemente auf entweder ihre kanonische Form (Modus »canonical«) oder ihre Erweiterte-Sprach-Unter-Tags-Form (Modus »extlang«) oder gar nicht normalisieren (Modus »off«)"
+msgstr "Alle IETF-BCP-47-Sprachelemente geänderter Elemente auf entweder ihre kanonische Form (Modus »canonical«) oder ihre Erweiterte-Sprach-Unterelemente-Form (Modus »extlang«) oder gar nicht normalisieren (Modus »off«)"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:313
 #, no-c-format
@@ -10419,7 +10419,7 @@ msgstr "Einmal durch kanonische Form ersetzen"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:181
 #, no-c-format
 msgid "Replace with extended language subtags form once"
-msgstr "Einmal durch Erweiterte-Sprach-Unter-Tags-Form ersetzen"
+msgstr "Einmal durch Erweiterte-Sprach-Unterelemente-Form ersetzen"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:721
 #, no-c-format
@@ -12013,7 +12013,7 @@ msgstr "Der Dateikopf der Korrekturdatei konnte nicht gelesen werden.\n"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:481
 #, no-c-format
 msgid "The corresponding canonical & extended language subtags forms are: %1."
-msgstr "Die entsprechenden kanonischen & Erweiterte-Sprach-Unter-Tags-Formen lauten: %1."
+msgstr "Die entsprechenden kanonischen & Erweiterte-Sprach-Unterelemente-Formen lauten: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:484
 #, no-c-format
@@ -12023,7 +12023,7 @@ msgstr "Die entsprechende kanonische Form lautet: %1."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:487
 #, no-c-format
 msgid "The corresponding extended language subtags form: %1."
-msgstr "Die entsprechende Erweiterte-Sprach-Unter-Tags-Form lautet: %1."
+msgstr "Die entsprechende Erweiterte-Sprach-Unterelemente-Form lautet: %1."
 
 #: src/merge/output_control.cpp:1627
 #, no-c-format
@@ -12197,12 +12197,12 @@ msgstr "Die Fehlermeldung war:"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:451
 #, no-c-format
 msgid "The extended language subtag '%1' is deprecated."
-msgstr "Das erweiterte Sprach-Unter-Tag »%1« ist veraltet."
+msgstr "Das erweiterte Sprach-Unterelement »%1« ist veraltet."
 
 #: src/common/bcp47.cpp:417
 #, no-c-format
 msgid "The extended language subtag '{}' must only be used with one of the following prefixes: {}."
-msgstr "Das erweiterte Sprach-Unter-Tag »{}« darf nur zusammen mit den folgenden Präfixen benutzt werden: {}."
+msgstr "Das erweiterte Sprach-Unterelement »{}« darf nur zusammen mit den folgenden Präfixen benutzt werden: {}."
 
 #: src/output/p_mpeg4_p2.cpp:360
 #, no-c-format
@@ -13299,12 +13299,12 @@ msgstr "Der Wert »{}« ist kein gültiger numerischer UN M.49-Ländercode."
 #: src/common/bcp47.cpp:301
 #, no-c-format
 msgid "The value '{}' is not part of the IANA Language Subtag Registry for extended language subtags."
-msgstr "Der Wert »{}« ist nicht Bestandteil der IANA Sprach-Unter-Tag-Registratur für erweiterte Sprach-Unter-Tags."
+msgstr "Der Wert »{}« ist nicht Bestandteil der IANA Sprach-Unterelement-Registratur für erweiterte Sprach-Unterelemente."
 
 #: src/common/bcp47.cpp:316
 #, no-c-format
 msgid "The value '{}' is not part of the IANA Language Subtag Registry for language variants."
-msgstr "Der Wert »{}« ist nicht Bestandteil der IANA Sprach-Unter-Tag-Registratur für Sprachvarianten."
+msgstr "Der Wert »{}« ist nicht Bestandteil der IANA Sprach-Unterelement-Registratur für Sprachvarianten."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:506
 #: src/mkvtoolnix-gui/merge/input.cpp:520
@@ -13326,7 +13326,7 @@ msgstr "Der Wert kann negativ sein, aber beachten Sie, dass alle Frames, deren Z
 #: src/common/bcp47.cpp:489
 #, no-c-format
 msgid "The value does not adhere to the general structure of IETF BCP 47/RFC 5646 language tags."
-msgstr "Der Wert folgt nicht der allgemeinen Struktur von IETF BCP 47-/RFC 5646-Sprach-Tags."
+msgstr "Der Wert folgt nicht der allgemeinen Struktur von IETF-BCP-47-/RFC-5646-Sprachelemente."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:536
 #, no-c-format
@@ -15380,7 +15380,7 @@ msgstr "gleichseitige Rektangularprojektion"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:844
 #, no-c-format
 msgid "extended language subtags form"
-msgstr "Erweiterte-Sprach-Unter-Tags-Form"
+msgstr "Erweiterte-Sprach-Unterelemente-Form"
 
 #: src/merge/output_control.cpp:439
 #, no-c-format
